# huspacy

hu_core_news_lg/: .bumpversion.cfg  .gitignore  CHANGELOG.md  DEVELOP.md  project.yml  pyproject.toml
hu_core_news_md/: .bumpversion.cfg  CHANGELOG.md  DEVELOP.md  project.yml  pyproject.toml
scripts/: tag_model.py
