[project]
name = "hu_core_news_lg"
version = "3.8.0"
description = "Hungarian core pipeline for HuSpaCy. Components: senter, tagger, morphologizer, lemmatizer, parser, ner"
authors = [{ name = "SzegedAI, MILAB", email = "gyorgy@orosz.link" }]
requires-python = "~=3.12"
license = "cc-by-sa-4.0"
dependencies = [
    "spacy==3.8.7",
    "cupy-cuda13x==13.6.0",
    "huggingface-hub>=1.0.1",
]

[dependency-groups]
dev = [
    "spacy-huggingface-hub==0.0.10",
    "spacy-loggers~=1.0.5",
    "spacy_conll>=4.0,<4.1",
    "conllu~=6.0.0",
    "wandb==0.22.3",
    "contexttimer>=0.3.3,<0.4",
    "wheel>=0.45.1.0,<0.46.0",
    "build==1.2.1",
    "setuptools==69.5.1",
    "pip>=22.3.1",
    "bump2version>=1.0.1,<2",
]
